 * Don't show "F1", "F2", etc. in ammo menu if these aren't the actual slot keys
 * Fix wind bar animation not looping properly
 * Fix airplane line being drawn above many HUD elements
 * Suppress “<team> is gone.” message at end of game
 * Fix game engine ignoring appropriate number formatting of user language
 * Fix buggy behaviour when entering speech bubble command in hog placement phase

Translations:
 + Complete: German, Polish
 + Major updates: Chinese, Scottish Gaelic
 + Credits page is now translatable
 * Remove Arabic translation from release

Frontend:
 + Add button in main menu at top left corner to open credits page
 + Restructure credits page
 + More intelligent automatic mission selection in campaign screen
 + New data directory for video thumbnails: Data/VideoThumbnails
 + Display a warning when the same key is used multiple times
 + Stats screen now hides empty sections
 + Visual notification when someone joins the room online
 + Display recommended max. hedgehog count for Perlin maps
 + Various minor style tweaks
 + Remember maximized state of frontend/game window
 * Fix broken handling of /watch chat command on official server
 * Fix renaming a video leading to loss of thumbnail after restart
 * Fix controls list failing to display correct key names with regards to keyboard layout
 * Fix force-locked schemes getting unlocked when changing map types
 * Fix possible to select background-only or hidden themes indirectly by changing map type
 * Disallow slash, backslash and colon characters in team and scheme names

Sounds and voicepacks:
 + sndYoohoo has been split to sndYoohoo and sndKiss
 + Voice files sndPoisonCough and sndPoisonMoan are now optional (fall back to Default voicepack)
 + Add taunt: sndFlyAway / Flyaway.ogg: When hedgehog flies off the map
 + Add underwater sound for airplane
 + Tweak some taunts: sndFirstBlood, sndLeaveMeAlone, sndCutItOut